@@ -1,15 +1,12 @@
 // Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package org.jetbrains.idea.maven.wizards;
 
-import com.intellij.ide.projectWizard.ProjectWizardTestCase;
-import com.intellij.ide.util.newProjectWizard.AbstractProjectWizard;
 import com.intellij.maven.testFramework.MavenTestCase;
-import com.intellij.openapi.application.ApplicationManager;
+import com.intellij.maven.testFramework.utils.MavenImportingTestCaseKt;
 import com.intellij.openapi.externalSystem.service.project.manage.ExternalProjectsManagerImpl;
 import com.intellij.openapi.module.Module;
 import com.intellij.openapi.module.ModuleManager;
 import com.intellij.openapi.project.Project;
-import com.intellij.openapi.projectRoots.impl.JavaAwareProjectJdkTableImpl;
 import com.intellij.openapi.vfs.LocalFileSystem;
 import com.intellij.openapi.vfs.VirtualFile;
 import com.intellij.testFramework.PlatformTestUtil;
@@ -27,10 +24,10 @@ import org.jetbrains.idea.maven.server.MavenServerManager;
 import org.jetbrains.idea.maven.utils.MavenUtil;
 
 import java.io.File;
-import java.io.IOException;
 import java.nio.file.Path;
-import java.util.Collections;
+import java.util.HashSet;
 import java.util.List;
+import java.util.Set;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.TimeoutException;
 import java.util.function.Consumer;
@@ -38,30 +35,7 @@ import java.util.function.Consumer;
 import static com.intellij.testFramework.PlatformTestUtil.assertPathsEqual;
 import static org.assertj.core.api.Assertions.assertThat;
 
-public class MavenImportWizardTest extends ProjectWizardTestCase<AbstractProjectWizard> {
-
-  @Override
-  public void tearDown() throws Exception {
-    try {
-      if (MavenImportingManager.getInstance(myProject).isImportingInProgress()) {
-        PlatformTestUtil.waitForPromise(MavenImportingManager.getInstance(myProject).getImportFinishPromise());
-      }
-
-      if (getCreatedProject() != null && MavenImportingManager.getInstance(getCreatedProject()).isImportingInProgress()) {
-        PlatformTestUtil.waitForPromise(MavenImportingManager.getInstance(getCreatedProject()).getImportFinishPromise());
-      }
-
-      MavenServerManager.getInstance().shutdown(true);
-      JavaAwareProjectJdkTableImpl.removeInternalJdkInTests();
-    }
-    catch (Throwable e) {
-      addSuppressedException(e);
-    }
-    finally {
-      super.tearDown();
-    }
-  }
-
+public class MavenImportWizardTest extends MavenProjectWizardTestCase {
   public void testImportModule() throws Exception {
     Path pom = createPom();
     Module module = importModuleFrom(new MavenProjectImportProvider(), pom.toString());
@@ -79,7 +53,6 @@ public class MavenImportWizardTest extends ProjectWizardTestCase<AbstractProject
   public void testImportProject() throws Exception {
     Path pom = createPom();
     Module module = importProjectFrom(pom.toString(), null, new MavenProjectImportProvider());
-    assertThat(module.getName()).isEqualTo(pom.getParent().toFile().getName());
 
     afterImportFinished(module.getProject(), c -> {
       assertThat(ModuleManager.getInstance(c.getProject()).getModules()).hasOnlyOneElementSatisfying(
@@ -98,7 +71,6 @@ public class MavenImportWizardTest extends ProjectWizardTestCase<AbstractProject
     createMavenWrapper(pom,
                        "distributionUrl=https://cache-redirector.jetbrains.com/repo.maven.apache.org/maven2/org/apache/maven/apache-maven/3.8.1/apache-maven-3.8.1-bin.zip");
     Module module = importProjectFrom(pom.toString(), null, new MavenProjectImportProvider());
-    assertThat(module.getName()).isEqualTo(pom.getParent().toFile().getName());
 
     afterImportFinished(module.getProject(), c -> {
       assertThat(ModuleManager.getInstance(c.getProject()).getModules()).hasOnlyOneElementSatisfying(
@@ -113,7 +85,6 @@ public class MavenImportWizardTest extends ProjectWizardTestCase<AbstractProject
     Path pom = createPom();
     createMavenWrapper(pom, "property1=value1");
     Module module = importProjectFrom(pom.toString(), null, new MavenProjectImportProvider());
-    assertThat(module.getName()).isEqualTo(pom.getParent().toFile().getName());
     String mavenHome = MavenWorkspaceSettingsComponent.getInstance(module.getProject()).getSettings().getGeneralSettings().getMavenHome();
     assertEquals(MavenServerManager.BUNDLED_MAVEN_3, mavenHome);
 
@@ -143,47 +114,24 @@ public class MavenImportWizardTest extends ProjectWizardTestCase<AbstractProject
       });
     }
     else {
-      List<Path> paths = ContainerUtil.map(
-        MavenProjectsManager.getInstance(module.getProject()).getProjectsTreeForTests().getExistingManagedFiles(), m -> m.toNioPath()
-      );
-      assertEquals(2, paths.size());
-      assertContainsElements(paths, pom1, pom2);
+      var project = module.getProject();
+      var modules = ModuleManager.getInstance(project).getModules();
+      var moduleNames = new HashSet<String>();
+      for (var existingModule : modules) {
+        moduleNames.add(existingModule.getName());
+      }
+      assertEquals(Set.of("project", "project2"), moduleNames);
+
+      var projectsManager = MavenProjectsManager.getInstance(project);
+      var mavenProjectNames = new HashSet<String>();
+      for (var p : projectsManager.getProjects()) {
+        mavenProjectNames.add(p.getMavenId().getArtifactId());
+      }
+      assertEquals(Set.of("project", "project2"), mavenProjectNames);
     }
   }
 
-  public void testImportProjectWithChildPomShouldContainRootPom() throws Exception {
-    Path pom1 = createPom();
-    Path pom2 = pom1.getParent().resolve("pom2.xml");
-    PathKt.write(pom2, MavenTestCase.createPomXml(
-      """
-        <groupId>test</groupId>
-        <artifactId>project2</artifactId>
-        <version>1</version>
-        """));
-    MavenProjectImportProvider provider = new MavenProjectImportProvider();
-    MavenProjectBuilder builder = (MavenProjectBuilder)provider.doGetBuilder();
-    builder.setFileToImport(LocalFileSystem.getInstance().refreshAndFindFileByNioFile(pom2));
-    Module module = importProjectFrom(pom1.toString(), null, provider);
-    if (MavenUtil.isLinearImportEnabled()) {
-      afterImportFinished(module.getProject(), c -> {
-        List<Path> paths = ContainerUtil.map(
-          MavenProjectsManager.getInstance(module.getProject()).getProjectsTreeForTests().getRootProjectsFiles(), m -> m.toNioPath()
-        );
-        assertEquals(1, paths.size());
-        assertEquals(pom2, paths.get(0));
-      });
-    }
-    else {
-      List<Path> paths = ContainerUtil.map(
-        MavenProjectsManager.getInstance(module.getProject()).getProjectsTreeForTests().getExistingManagedFiles(), m -> m.toNioPath()
-      );
-      assertEquals(1, paths.size());
-      assertEquals(pom2, paths.get(0));
-    }
-  }
-
-
-  public void testShouldStoreImlFileInSameDirAsPomXml() throws IOException {
+  public void testShouldStoreImlFileInSameDirAsPomXml() {
     Path dir = getTempDir().newPath("", true);
     String projectName = dir.toFile().getName();
     Path pom = dir.resolve("pom.xml");
@@ -192,8 +140,6 @@ public class MavenImportWizardTest extends ProjectWizardTestCase<AbstractProject
       "<artifactId>\n" + projectName + "</artifactId>\n" +
       "<version>1</version>"));
     MavenProjectImportProvider provider = new MavenProjectImportProvider();
-    MavenProjectBuilder builder = (MavenProjectBuilder)provider.doGetBuilder();
-    builder.setFileToImport(LocalFileSystem.getInstance().refreshAndFindFileByNioFile(pom));
     Module module = importProjectFrom(pom.toString(), null, provider);
     Project project = module.getProject();
     waitForMavenImporting(project, LocalFileSystem.getInstance().findFileByNioFile(pom));
@@ -210,25 +156,11 @@ public class MavenImportWizardTest extends ProjectWizardTestCase<AbstractProject
     MavenProjectsManager manager = MavenProjectsManager.getInstance(project);
     if (!MavenUtil.isLinearImportEnabled()) {
       manager.waitForImportCompletion();
-      ApplicationManager.getApplication().invokeAndWait(() -> {
-        manager.scheduleImportInTests(Collections.singletonList(file));
-        manager.importProjects();
-      });
+      MavenImportingTestCaseKt.importMavenProjectsSync(manager, List.of(file));
     }
 
     Promise<?> promise = manager.waitForImportCompletion();
     PlatformTestUtil.waitForPromise(promise);
-  }
-
-  private @NotNull Path createPom() throws IOException {
-    return createPom("pom.xml");
-  }
-
-  private @NotNull Path createPom(String pomName) throws IOException {
-    return createTempFile(pomName, MavenTestCase.createPomXml("""
-                                                                <groupId>test</groupId>
-                                                                <artifactId>project</artifactId>
-                                                                <version>1</version>""")).toPath();
   }
 
   private static void createMavenWrapper(@NotNull Path pomPath, @NotNull String context) {
